--- a/src/RightSide/RightSide.css
+++ b/src/RightSide/RightSide.css
@@ -10,7 +10,7 @@
 .contact-info,
 .logos {
     color: gray;
-    margin: 0px 0px 0px 0px;
+    margin: 15px 0px 0px 0px;
 }
 
 .logos {
